# ml-biscuit

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml  setup.cfg
deploy/: Dockerfile
src/: app.py  interpret.py
src/utils/: diagnose.py  io.py  log.py  plot.py  predictor.py
tests/: test_model.py
{{ cookiecutter.repo_name }}/: .python-version  Makefile  test_environment.py
