[tool.poetry]
name = "ml-biscuit"
version = "0.1.0"
description = ""
authors = ["marcalph <alphonsus.marc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
ydata-profiling = "^4.7.0"
click = "^8.1.7"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
scikit-learn = "^1.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pandas-stubs = "^2.2.1.240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
